--- a/doc/TODO
+++ b/doc/TODO
@@ -5,6 +5,7 @@ allow public access / private editing
 suppress global from Sacaliens.php (inject $_t, Tpl, DB)
 extract tagDisplay, tegEdit and tagFusion from Sacaliens class
 use pdo instead of mysql driver
-utils.php to a class ??
-move *.css in a css/ directory
+implement model classes
+--utils.php to a class ??
+--move *.css in a css/ directory
 re-design !
